# nova-cli-agent

./: .env.example  .gitignore  README.md  agent.md.bak  build.py  pyproject.toml  requirements.txt  test_api_keys.py
src/alf_AIdebugger/: analyzer.py  cli.py  prompts.py  secure_storage.py  tools.py  utils.py  web_search.py
