[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-cli-agent"
version = "0.1.0"
description = "Nova CLI-Agent: Your lightweight, open-source AI coding companion, powered by SambaNova. A nimble alternative for code generation, analysis, bug prediction, and learning, right in your terminal."
authors = [
    {name = "SambaNova", email = "author@example.com"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Coding Assistants",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "tavily-python>=0.3.0",
]

[project.urls]
Repository = "https://github.com/example/nova-cli-agent"

[project.scripts]
nova-cli = "alf_AIdebugger.cli:main"

[tool.setuptools.packages.find]
where = ["src"]